--- a/404.html
+++ b/404.html
@@ -1,8 +1,22 @@
----
-layout: default
----
-
-<style type="text/css" media="screen">
+<!DOCTYPE html>
+	<html>
+		<head>
+			<title></title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+		</head>
+		<body>
+			<nav>
+	    		<ul>
+	        		<li><a href="/">Home</a></li>
+		        	<li><a href="/about">About</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+	    		</ul>
+			</nav>
+			<div class="container">
+			
+			<style type="text/css" media="screen">
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -22,3 +36,13 @@ layout: default
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+
+			
+			</div><!-- /.container -->
+			<footer>
+	    		<ul>
+	        		
+				</ul>
+			</footer>
+		</body>
+	</html>
