--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype>
 <html>
   <head>
+<link href="{{ site.github.url }}/assets/main.css" rel="stylesheet">
   </head>
   <body>
   ThroughBit Documentation
