--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype>
 <html>
   <head>
-<link href="{{ site.github.url }}/assets/main.css" rel="stylesheet">
+<link href="https://throughbit.github.io/assets/main.css" rel="stylesheet">
   </head>
   <body>
   ThroughBit Documentation
